[package]
name = "lightflow-rig-llm"
version = "0.1.0"
edition = "2024"
description = "LightFlow workflow for routing prompts through Rig to arbitrary LLM providers."
license = "MIT OR Apache-2.0"
repository = "https://github.com/lightjunction/LightFlow"

[dependencies]
lightflow = { workspace = true }
